Add additional functionality

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build && sh scripts/moveFiles.sh",
-    "deploy:prod": "yarn build && sls deploy -s prod",
-    "deploy": "yarn build && sls deploy -s dev",
-    "deploy:function": "yarn build && sls deploy -s dev function",
-    "deploy:prod:function": "yarn build && sls deploy -s prod function"
+    "build:cleanup": "sh scripts/cleanup.sh",
+    "deploy:prod": "yarn build && export AWS_PROFILE=rekaper && sls -s prod deploy ",
+    "deploy": "yarn build && export AWS_PROFILE=rekaper && yes | sls -s dev deploy && yarn build:cleanup",
+    "deploy:function": "yarn build && export AWS_PROFILE=rekaper && sls deploy -s dev function",
+    "deploy:prod:function": "yarn build && export AWS_PROFILE=rekaper && sls -s prod deploy function"
   },
   "author": "",
   "license": "ISC",
